--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "react-subtitles": "^0.1.3",
     "request": "^2.88.2",
     "socket.io-client": "^4.8.1",
-    "srt-parser-2": "^1.1.7",
-    "@react-native-google-signin/google-signin": "^11.0.1"
+    "srt-parser-2": "^1.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
