--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.9.2",
@@ -27,6 +28,7 @@
     "react-native": "0.75.3",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-credit-card": "^0.1.9",
     "react-native-custom-header": "^1.0.0",
     "react-native-drawer": "^2.5.1",
     "react-native-element-dropdown": "^1.8.13",
@@ -52,8 +54,7 @@
     "react-subtitles": "^0.1.3",
     "request": "^2.88.2",
     "socket.io-client": "^4.8.1",
-    "srt-parser-2": "^1.1.7",
-    "@react-native-google-signin/google-signin": "^11.0.1"
+    "srt-parser-2": "^1.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
