--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+ENV['NODE_BINARY'] = `which node`.strip
+
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
