--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,21 +7,23 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, '15.0'#min_ios_version_supported
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
+  # use_frameworks! :linkage => :static
+  # $RNFirebaseAsStaticFramework = true
 end
 
 target 'Vidkar' do
   config = use_native_modules!
-
+  
   use_frameworks! :linkage => :static
   $RNFirebaseAsStaticFramework = true
-  
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
