--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,9 +38,14 @@
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="https" android:host="www.vidkar.com" />
-        <!-- Si se quisiera cubrir http también: -->
-        <data android:scheme="http" android:host="www.vidkar.com" />
+        <data android:scheme="http" />
+        <data android:scheme="https" />
+        <data android:host="www.vidkar.com" />
+    </intent-filter>
+        <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
         <data android:scheme="vidkar" />
     </intent-filter>
       </activity>
