--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -234,6 +234,18 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    // If your app supports Android versions before Ice Cream Sandwich (API level 14)
+    implementation 'com.facebook.fresco:animated-base-support:1.3.0'
+
+    // For animated GIF support
+    implementation 'com.facebook.fresco:animated-gif:3.6.0'
+
+    // For WebP support, including animated WebP
+    implementation 'com.facebook.fresco:animated-webp:3.6.0'
+    implementation 'com.facebook.fresco:webpsupport:3.6.0'
+
+    // For WebP support, without animations
+    implementation 'com.facebook.fresco:webpsupport:3.6.0'
 
     debugImplementation 'com.facebook.flipper:flipper:0.125.0'
     debugImplementation 'com.facebook.flipper:flipper-network-plugin:0.125.0'
