--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "windows": "npx @react-native-community/cli run-windows"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.4.1",
     "@meteorrn/core": "^2.1.0",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.15.2",
