--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,16 +3,22 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
- 
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    <!-- Permisos de cámara -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    
+    <!-- Permisos de galería (Android 13+) -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    
+    
+    <!-- Feature cámara (opcional, marca que la app usa cámara pero no la requiere) -->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <!-- ESTO VA DENTRO DE APPLICATION -->
-<!-- android:usesCleartextTraffic="true" -->
+    <!-- android:usesCleartextTraffic="true" -->
     <application
       android:usesCleartextTraffic="true"
       android:name=".MainApplication"
