feat: agregar dependencias react-native-compressor y react-native-image-crop-picker en package.json

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.75.3",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-compressor": "^1.13.0",
     "react-native-credit-card": "^0.1.9",
     "react-native-custom-header": "^1.0.0",
     "react-native-drawer": "^2.5.1",
@@ -39,6 +40,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-image-crop-picker": "^0.51.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^11.7.0",
