Refactor code structure for improved readability and maintainability

--- a/ios/.xcode.env
+++ b/ios/.xcode.env
@@ -9,3 +9,24 @@
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
 export NODE_BINARY=$(command -v node)
+
+# react-native-permissions configuration for iOS
+# Enable only the permissions we need
+export RNP_CAMERA=1
+export RNP_PHOTO_LIBRARY=1
+export RNP_MICROPHONE=0
+
+# Disable permissions we don't use to reduce binary size
+export RNP_LOCATION_WHEN_IN_USE=0
+export RNP_LOCATION_ALWAYS=0
+export RNP_MOTION=0
+export RNP_BLUETOOTH_PERIPHERAL=0
+export RNP_CALENDARS=0
+export RNP_CONTACTS=0
+export RNP_FACE_ID=0
+export RNP_MEDIA_LIBRARY=0
+export RNP_NOTIFICATIONS=0
+export RNP_REMINDERS=0
+export RNP_SIRI=0
+export RNP_SPEECH_RECOGNITION=0
+export RNP_STORE_KIT=0
