--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -68,6 +68,9 @@
     android:name="com.supersami.foregroundservice.notification_color"
     android:resource="@color/blue"
   />
+  <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="AIzaSyD1r5uJ1PBgUaZkqKtlCgInLJtrA-Fem5g"/>
  
   <service android:name="com.supersami.foregroundservice.ForegroundService" android:foregroundServiceType="dataSync"></service> // also define android:foregroundServiceType="" according to your use case
   <service android:name="com.supersami.foregroundservice.ForegroundServiceTask" android:foregroundServiceType="dataSync"></service> // also define android:foregroundServiceType="" according to your use case
