--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "react-native-element-dropdown": "^1.8.13",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-crop-picker": "^0.51.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.17.1",
     "react-native-modal": "^11.7.0",
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^4.1.5",
@@ -63,6 +65,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^20.0.2",
     "@react-native-community/cli-platform-android": "^14.1.1",
     "@react-native/babel-preset": "0.75.3",
     "@react-native/eslint-config": "0.75.3",
