--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
     "@react-native-community/slider": "^4.5.5",
@@ -30,6 +31,7 @@
     "moment": "^2.29.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-background-actions": "^4.0.1",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-credit-card": "^0.1.9",
