feat: add new scheme for Vidkar copy and update Info.plist for location permission
- Created a new Xcode scheme for "Vidkar copy" to facilitate building and testing.
- Updated Info.plist to include location permission request.
- Updated yarn.lock to include the latest version of fsevents.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,20 @@ end
 target 'Vidkar' do
   config = use_native_modules!
   
+  require_relative '../node_modules/react-native-permissions/scripts/setup'
+
+  # Permissions for react-native-permissions
+  setup_permissions([
+    'LocationWhenInUse',
+    'LocationAlways',
+    'Camera',
+    'PhotoLibrary',
+    'PhotoLibraryAddOnly',
+    'Microphone',
+    'Notifications',
+    'FaceID',
+  ])
+
   use_frameworks! :linkage => :static
   $RNFirebaseAsStaticFramework = true
   $FirebaseSDKVersion = '12.4.0'
