--- a/ios/Vidkar/Info.plist
+++ b/ios/Vidkar/Info.plist
@@ -106,6 +106,7 @@
 	<array>
 		<string>fetch</string>
 		<string>remote-notification</string>
+		<string>location</string>
 	</array>
 	    <!-- Permiso de cámara -->
     <key>NSCameraUsageDescription</key>
