--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -228,6 +228,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation "com.google.android.gms:play-services-location:21.3.0"
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
@@ -250,7 +251,6 @@ dependencies {
     debugImplementation 'com.facebook.flipper:flipper:0.125.0'
     debugImplementation 'com.facebook.flipper:flipper-network-plugin:0.125.0'
     debugImplementation 'com.facebook.flipper:flipper-fresco-plugin:0.125.0'
-
     
 }
 
