fix: actualizar el comando de instalación de dependencias para usar yarn y npm con opciones de compatibilidad

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -106,9 +106,13 @@ workflows:
           export BUILD_NUMBER=$PROJECT_BUILD_NUMBER 
           echo "BUILD_NUMBER=$BUILD_NUMBER"
 
+      - name: Install dependencies con yarn (opcional)
+        script: |
+          yarn install --legacy-peer-deps
+
       - name: Install dependencies
         script: |
-          npm install -f
+          npm install --legacy-peer-deps
 
       - name: Build Android App Bundle (AAB)
         script: |
