--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/stack": "^5.9.2",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "lucide-react-native": "^0.563.0",
     "moment": "^2.29.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
@@ -46,7 +47,7 @@
     "react-native-image-crop-picker": "^0.51.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "^1.18.0",
     "react-native-modal": "^11.7.0",
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^4.1.5",
